--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "date-fns": "^2.15.0",
+    "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "mobiscroll-react": "^4.0.0",
     "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
