--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.7.7",
-    "date-fns": "^4.0.0", // Upgraded date-fns version
+    "date-fns": "^4.0.0",
     "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "moment": "^2.30.1",
