--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.4",
-    "@mui/x-date-pickers": "^7.22.1",
+    "@mui/icons-material": "^5.11.1",
+    "@mui/material": "^5.11.1",
+    "@mui/x-date-pickers": "^5.0.1",
     "@nivo/line": "^0.87.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,28 +18,27 @@
     "@toolpad/core": "^0.8.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.113",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.14",
     "axios": "^1.7.7",
-    "date-fns": "^4.0.0",
+    "date-fns": "^2.15.0",
     "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install --legacy-peer-deps && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
