--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nivo/line": "^0.87.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^11.2.7"
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.8.1",
     "@types/jest": "^27.5.2",
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install --legacy-peer-deps && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
