--- a/package.json
+++ b/package.json
@@ -6,28 +6,27 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@material-ui/core": "^4.11.0",
-    "@mui/icons-material": "^4.11.2",
-    "@mui/material": "^4.11.2",
-    "@mui/x-date-pickers": "^4.0.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.22.1",
     "@nivo/line": "^0.87.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.8.1",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.113",
-    "@types/react": "^16.14.11",
-    "@types/react-dom": "^16.14.9",
+    "@types/node": "^18.16.15",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.17",
     "axios": "^1.7.7",
-    "date-fns": "^2.15.0",
+    "date-fns": "^4.0.0",
     "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
@@ -38,7 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install --legacy-peer-deps && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
