--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@material-ui/core": "^5.13.9",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.22.1",
