--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@toolpad/core": "^0.8.1",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
+    "@mui/system": "^6.1.8",
+    "react-datepicker": "^7.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.16.15",
     "@types/react": "^18.2.14",
