--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
+    "@mui/system": "^6.1.8",
     "@mui/x-date-pickers": "^6.20.2",
     "@nivo/line": "^0.87.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -15,30 +16,32 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@toolpad/core": "^0.8.1",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
-    "@mui/system": "^6.1.8",
-    "react-datepicker": "^7.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.16.15",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "ag-charts-enterprise": "^10.3.3",
+    "ag-charts-react": "^10.3.3",
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "https-browserify": "^1.0.0",
+    "lightweight-charts": "^4.2.1",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.26.2",
+    "react-screen-capture": "^1.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "react-vis": "^1.11.7",
     "typescript": "^4.9.5",
+    "use-react-screenshot": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,5 +67,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-vis": "^1.11.15",
+    "react-tradingview-embed": "^3.0.6",
+    "react-tradingview-widget": "^1.3.2"
   }
 }
