--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ag-charts-react": "^10.3.3",
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
     "https-browserify": "^1.0.0",
@@ -40,6 +41,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "react-vis": "^1.11.7",
+    "recharts": "^2.15.1",
     "typescript": "^4.9.5",
     "use-react-screenshot": "^4.0.0",
     "web-vitals": "^2.1.4"
